--- a/index.html
+++ b/index.html
@@ -63,18 +63,23 @@
    </header>
     <main class=" bg-[#e7f9ed]">
       <!-- main part  -->
-        <h1 class="text-2xl font-bold text-center py-6">Choose Your Trees</h1>
-       <div class="flex ">
-        <div id="categories" class="w-[25%] ">
+       <div class="  max-w-[1220px] mx-auto">
+         <h1 class="text-2xl font-bold text-center py-6">Choose Your Trees</h1>
+       <div class="flex sm:flex-row sm:gap-x-2 flex-col text-center  ">
+        <div class=" sm:w-[10%] ">
            <h1 class="text-xl font-semibold text-center py-6">Categories</h1>
-
+           <ul  id="categories-container" >
+          
+           </ul>
         </div>
-        <div id="" class="w-[50%]">
 
+        <div id="all-trees" class=" sm:w-[75%] grid grid-cols-1  sm:grid-cols-3 gap-y-3 gap-x-3 mx-auto">
+         
         </div>
-        <div class="w-[25%] bg-white rounded-xl">
+        <div class=" sm:w-[15%] bg-white rounded-xl sm:h-[700px] sm:m-0 h-[500px] m-[20px]">
            <h1 class="text-xl font-semibold text-center py-6">Your Cart</h1>
         </div>
+       </div>
        </div>
 
       <!-- about our campaign starts  -->
@@ -137,6 +142,6 @@
     <footer class="bg-[#14532d] text-white text-center">
            @ 2025 . All Rights Reserved .
     </footer>
-    <script src="./assign.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
